--- a/inventories/group_vars/all/apache.yml
+++ b/inventories/group_vars/all/apache.yml
@@ -1,2 +1,6 @@
 ---
 apache_sites_dir: /var/www/sites
+default_apache_user: www-data
+default_apache_group: www-data
+apache_server_root: /etc/apache2
+apache_log_dir: /var/log/apache2
