--- a/playbooks/web_apache/vars.yml
+++ b/playbooks/web_apache/vars.yml
@@ -15,6 +15,11 @@ apache_mods_enabled:
   - proxy
   - proxy_fcgi
   - alias
+  # For webdav:
+  - dav
+  - dav_fs
+  - dav_lock
+  - auth_digest
   # You haven't bothered with pagespeed this time. More trouble than it's worth.
 
 # apache_mods_disabled: []
