--- a/inventories/dev.aws_ec2.yml
+++ b/inventories/dev.aws_ec2.yml
@@ -1,5 +1,5 @@
 plugin: amazon.aws.aws_ec2
-strict: True
+strict: true
 
 # Yee haw
 regions:
@@ -29,4 +29,3 @@ keyed_groups:
 # Elastic IP if the host has one.
 compose:
   ansible_host: public_ip_address
-
