--- a/playbooks/openvpn/main.yml
+++ b/playbooks/openvpn/main.yml
@@ -123,10 +123,42 @@
         - "{{ easy_rsa_pki_path }}/issued/{{ ansible_hostname }}.crt"
         - "{{ easy_rsa_pki_path }}/private/{{ ansible_hostname }}.key"
 
-    # Next step: generate client certificate. You'll need to grab
-    # pki/ca.crt and pki/issued/homemac.crt to your local machine
-    # and configure them in your OpenVPN client.
+    # Generate client certificates.
+    # TODO: You'll need to grab pki/ca.crt and pki/issued/homemac.crt
+    # to your local machine and configure them in your OpenVPN client.
+    # Maybe make this a bit easier by putting them in a tarball
+    # somewhere handy?
+    - name: Generate client request
+      ansible.builtin.command:
+        cmd: "./easyrsa gen-req {{ item }} nopass"
+        chdir: "{{ easy_rsa_path }}"
+        creates: "{{ easy_rsa_pki_path }}/reqs/{{ item }}.req"
+      environment:
+        EASYRSA_VARS_FILE: "{{ easy_rsa_vars_path }}"
+        EASYRSA_BATCH: "1"
+      loop: "{{ client_names }}"
 
+    - name: Generate client certificate
+      ansible.builtin.command:
+        cmd: "./easyrsa sign-req client {{ item }}"
+        chdir: "{{ easy_rsa_path }}"
+        creates: "{{ easy_rsa_pki_path }}/issued/{{ item }}.crt"
+      environment:
+        EASYRSA_VARS_FILE: "{{ easy_rsa_vars_path }}"
+        EASYRSA_BATCH: "1"
+      loop: "{{ client_names }}"
 
+    - name: Template server configure
+      ansible.builtin.template:
+        src: server.conf.j2
+        dest: /etc/openvpn/server.conf
+        owner: root
+        group: root
+        mode: '0600'
+
+    - name: Generate tls key
+      ansible.builtin.command:
+        cmd: openvpn --genkey --secret /etc/openvpn/ta.key
+        creates: /etc/openvpn/ta.key
 
   post_tasks:
