More work on OpenVPN. Shaping up to look vaguely like our current live config, at least...

--- a/playbooks/openvpn/main.yml
+++ b/playbooks/openvpn/main.yml
@@ -122,6 +122,7 @@
         - "{{ easy_rsa_pki_path }}/ca.crt"
         - "{{ easy_rsa_pki_path }}/issued/{{ ansible_hostname }}.crt"
         - "{{ easy_rsa_pki_path }}/private/{{ ansible_hostname }}.key"
+      notify: Restart openvpn
 
     # Generate client certificates.
     # TODO: You'll need to grab pki/ca.crt and pki/issued/homemac.crt
@@ -148,17 +149,59 @@
         EASYRSA_BATCH: "1"
       loop: "{{ client_names }}"
 
-    - name: Template server configure
-      ansible.builtin.template:
-        src: server.conf.j2
-        dest: /etc/openvpn/server.conf
-        owner: root
-        group: root
-        mode: '0600'
-
     - name: Generate tls key
       ansible.builtin.command:
         cmd: openvpn --genkey --secret /etc/openvpn/ta.key
         creates: /etc/openvpn/ta.key
+      notify: Restart openvpn
+
+    - name: Create server.up.d directory
+      ansible.builtin.file:
+        path: /etc/openvpn/server.up.d
+        state: directory
+        owner: root
+        group: root
+        mode: '0700'
+
+    - name: Template out server configuration files
+      ansible.builtin.template:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
+        owner: root
+        group: root
+        mode: "{{ item.mode | default('0600') }}"
+      with_items:
+        - src: server.conf.j2
+          dest: /etc/openvpn/server.conf
+          mode: '0600'
+        - src: server.up.sh.j2
+          dest: /etc/openvpn/server.up.sh
+          mode: '0700'
+        - src: server.down.sh.j2
+          dest: /etc/openvpn/server.down.sh
+          mode: '0700'
+        - src: iptables.up.sh.j2
+          dest: /etc/openvpn/server.up.d/iptables.up.sh
+          mode: '0700'
+        - src: forwarding.up.sh.j2
+          dest: /etc/openvpn/server.up.d/forwarding.up.sh
+          mode: '0700'
+
+      notify: Restart openvpn
+
+    - name: Enable and start openvpn systemd service
+      become: true
+      ansible.builtin.systemd:
+        name: openvpn@server
+        state: started
+        daemon_reload: true
+        enabled: true
+
+  handlers:
+    - name: Restart openvpn
+      ansible.builtin.systemd_service:
+        state: restarted
+        daemon_reload: true
+        name: openvpn@server
 
   post_tasks:
