Add pipelining to ssh conf

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -28,3 +28,7 @@ allow_world_readable_tmpfiles=True
 # Because life's too short, and who's going to run a man-in-the-
 # middle attack on *me*? I ain't worth it.
 host_key_checking = False
+
+[ssh_connection]
+# For speed; see “Faster OpenSSH with Pipelining” in Geerling's Ansible for DevOps.
+pipelining = True
