Use documented flag for apt upgrade, not true/false

--- a/roles/update_apt_packages/tasks/main.yml
+++ b/roles/update_apt_packages/tasks/main.yml
@@ -3,6 +3,6 @@
   # TODO: Do we want to limit this so we don't kick off every run with it? I suppose
   # it depends how often we want to run the playbooks...
   ansible.builtin.apt:
-    upgrade: true
+    upgrade: "yes"
     update_cache: true
     cache_valid_time: 3600
