--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,8 +8,8 @@ stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 #bin_ansible_callbacks = True
 
-# Chick-Fil-A would like a word...
-# nocows = True
+# I'm sick of them.
+nocows=True
 
 # Installs collections into [current dir]/ansible_collections/namespace/collection_name
 collections_path = ./
