--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,7 +9,10 @@ stdout_callback = yaml
 #bin_ansible_callbacks = True
 
 # I'm sick of them.
-nocows=True
+#nocows=True
+cow_selection=random
+cowsay_enabled_stencils=[] # Allow anything
+
 
 # Installs collections into [current dir]/ansible_collections/namespace/collection_name
 collections_path = ./
