Fix up the cows

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@ stdout_callback = yaml
 # I'm sick of them.
 #nocows=True
 cow_selection=random
-cowsay_enabled_stencils=[] # Allow anything
+#cowsay_enabled_stencils=[] # Allow anything
 
 
 # Installs collections into [current dir]/ansible_collections/namespace/collection_name
