--- a/inventories/group_vars/prod/ansible.yml
+++ b/inventories/group_vars/prod/ansible.yml
@@ -1,3 +1,5 @@
 ---
-ansible_user: gothick
-ansible_ssh_private_key_file: ~/.ssh/id_rsa
+# ansible_user: gothick
+# ansible_ssh_private_key_file: ~/.ssh/id_rsa
+ansible_user: ubuntu
+ansible_ssh_private_key_file: ~/.ssh/ansible
