I think it'll be helpful if our inventory only includes running ec2 instances...

--- a/inventories/prod.aws_ec2/prod.aws_ec2.yml
+++ b/inventories/prod.aws_ec2/prod.aws_ec2.yml
@@ -14,6 +14,8 @@ hostnames:
 filters:
   tag:env:
     - prod
+  # All instances with their state as `running`
+  instance-state-name: running
 
 # Create a dynamic group for each of our environments
 keyed_groups:
