--- a/inventories/dev.aws_ec2/dev.aws_ec2.yml
+++ b/inventories/dev.aws_ec2/dev.aws_ec2.yml
@@ -15,6 +15,8 @@ hostnames:
 filters:
   tag:env:
     - dev
+  # All instances with their state as `running`
+  instance-state-name: running
 
 # Create a dynamic group for each of our environments
 keyed_groups:
