Alter ssh connection options to try to improve speed

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -33,3 +33,6 @@ host_key_checking = False
 [ssh_connection]
 # For speed; see “Faster OpenSSH with Pipelining” in Geerling's Ansible for DevOps.
 pipelining = True
+# Again, can we make things faster? https://www.redhat.com/en/blog/faster-ansible-playbook-execution
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s
+
