--- a/playbooks/openvpn/vars.yml
+++ b/playbooks/openvpn/vars.yml
@@ -9,7 +9,7 @@ easy_rsa_pki_path: "{{ easy_rsa_path }}/pki"
 
 client_names:
   - homemac
-  - anotherone
+#  - anotherone
 
 client_config_dir: /etc/openvpn/client_certs
 
