--- a/playbooks/unattended_upgrades/vars.yml
+++ b/playbooks/unattended_upgrades/vars.yml
@@ -1,3 +1,4 @@
 ---
 unattended_upgrades_mail: "{{ admin_email }}"
 unattended_upgrades_mail_report: "on-change" # Your other choice is "only-on-error"
+unattended_upgrades_automatic_reboot: "true"
