Add ghostty role to install ghostty terminfo in system database

--- a/playbook.yml
+++ b/playbook.yml
@@ -14,6 +14,7 @@
     - ansible_tools
     - useful_tools
     - gothick.awscli
+    - gothick.ghostty
     - basicbind.swap_file.swap_file
 
   tasks:
