Move s3 backup storage to infrequent access; should save a bit of money.

--- a/playbooks/install_s3_backup_script/main.yml
+++ b/playbooks/install_s3_backup_script/main.yml
@@ -7,7 +7,7 @@
 
   vars_files:
     # - vault.yml
-    # - vars.yml
+    - vars.yml
 
   tasks:
     - name: Install percona-toolkit, used to dump mysql users and privileges separately
