Exclude exhibition docroot from initial creation as it's a symlink that'll be managed by Capistrano

--- a/playbooks/web_websites/vars.yml
+++ b/playbooks/web_websites/vars.yml
@@ -47,6 +47,7 @@ websites:
   - server_name: "exhibition.gothick.org.uk{{ test_hostname_suffix | default('') }}"
     docroot: "{{ apache_sites_dir }}/gothick.org.uk/exhibition.gothick.org.uk/current"
     allow_override: "all"
+    # create_docroot: false # Because this will be a symlink created by Capistrano
     docroot_owner: "gothick"
     docroot_group: "gothick"
     directory_options: "FollowSymLinks Multiviews"
